--- a/public/css/_index.scss
+++ b/public/css/_index.scss
@@ -15,8 +15,8 @@ background-color: #FFFA82;
   grid-template-columns: 2fr 2fr;
 }
 
-#index-splash h2{
-  margin: 0 auto;
+#index-splash h1{
+  margin: 7em auto;
   color: white;
   font-family: 'Lato', sans-serif;
   background-color: #FF4C24;
