--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,8 +12,8 @@ body {
   margin: 0 auto;
   grid-template-columns: 2fr 2fr; }
 
-#index-splash h2 {
-  margin: 0 auto;
+#index-splash h1 {
+  margin: 7em auto;
   color: white;
   font-family: 'Lato', sans-serif;
   background-color: #FF4C24; }
