--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,13 @@
+#todolistTitle {
+  margin-left: 42%;
+  margin-right: 30%; }
 
+#toDoList {
+  border: 2px solid red;
+  width: 250px;
+  position: relative;
+  top: 75px;
+  margin-left: 35%;
+  margin-right: 30%; }
 
 /*# sourceMappingURL=main.css.map */
