added finalizations with variables and mixins

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,6 +1,9 @@
+@import "varaibles";
+@import "mixins";
 @import "index";
 @import "contact";
 @import "gallery";
 @import "todolist";
 @import "week";
 @import "layout";
+@import "mixins";
