--- a/public/css/main.css
+++ b/public/css/main.css
@@ -92,7 +92,9 @@ body {
 #todolistTitle {
   margin-left: 44.5%;
   margin-right: 30%;
-  font-family: 'Lato', sans-serif; }
+  font-family: 'Lato', sans-serif;
+  position: relative;
+  top: 30px; }
 
 #toDoList {
   border: 2px solid red;
@@ -103,11 +105,17 @@ body {
   margin-right: 30%;
   font-family: 'Lato', sans-serif; }
 
+.movieBox:hover {
+  color: red;
+  opacity: 0.8; }
+
 #slideshowContainer {
   max-width: 1000px;
   position: relative;
   top: 75px;
-  margin: auto; }
+  height: 280px;
+  margin: auto;
+  background-color: #FF4C24; }
 
 .mySlides {
   position: relative;
@@ -121,7 +129,7 @@ body {
   width: auto;
   margin-top: -22px;
   padding: 16px;
-  color: red;
+  color: gray;
   font-weight: bold;
   font-size: 18px;
   font-family: 'Lato', sans-serif;
@@ -136,10 +144,11 @@ body {
   background-color: rgba(0, 0, 0, 0.8); }
 
 .text {
-  color: red;
+  color: white;
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
+  top: 240px;
   bottom: 8px;
   width: 100%;
   text-align: center;
