--- a/public/css/_todolist.scss
+++ b/public/css/_todolist.scss
@@ -1,7 +1,14 @@
 #todolistTitle {
 	margin-left: 44.5%;
 	margin-right: 30%;
+	position:relative;
+	top:40px;
 	font-family: 'Lato', sans-serif;
+}
+
+#movieListWrapper {
+	position:relative;
+	top:20px;
 }
 
 #toDoList {
@@ -18,7 +25,9 @@ font-family: 'Lato', sans-serif;
   max-width: 1000px;
   position: relative;
   top:75px;
+  height:280px;
   margin: auto;
+  background-color:#FF4C24; 
 }
 
 .mySlides {
@@ -35,7 +44,7 @@ font-family: 'Lato', sans-serif;
   width: auto;
   margin-top: -22px;
   padding: 16px;
-  color: red;
+  color: gray;
   font-weight: bold;
   font-size: 18px;
   font-family: 'Lato', sans-serif;
@@ -53,10 +62,11 @@ font-family: 'Lato', sans-serif;
 }
 
 .text {
-  color: red;
+  color: white;
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
+  top:240px;
   bottom: 8px;
   width: 100%;
   text-align: center;
@@ -64,7 +74,7 @@ font-family: 'Lato', sans-serif;
 }
 
 .numbertext {
-  color: red;
+  color: white;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
