--- a/public/css/main.css
+++ b/public/css/main.css
@@ -395,10 +395,11 @@ template {
 #todolistTitle {
   margin-left: 44.5%;
   margin-right: 30%;
+  position: relative;
+  top: 40px;
   font-family: 'Lato', sans-serif;
   position: relative;
   top: 30px; }
-
 
 #movieListWrapper {
   position: relative;
@@ -499,9 +500,6 @@ template {
     opacity: .4; }
   to {
     opacity: 1; } }
-body {
-  background-color: #FFFA82; }
-
 body {
   background-color: #FFFA82; }
 
