update the gallery page, the arrows are now working

--- a/views/gallery.erb
+++ b/views/gallery.erb
@@ -5,8 +5,14 @@
 </head>
 <body>
 <div id="galleryWrapper">
-	<div id="picture">
+	<div id="newMovies">
+		<a id="newMoviesleft">&#10094; </a>
+		NewMovies
+		<a id="newMoviesright">&#10095; </a>
 	</div>
+
+	<div id="scifi">Scifi</div>
+	<div id="other">Other</div>
 </div>
 
 
