--- a/public/css/main.css
+++ b/public/css/main.css
@@ -83,6 +83,27 @@ body {
   padding: 100px;
   text-align: center; }
 
+#galleryWrapper {
+  border: 2px solid red;
+  grid-template-columns: 1fr;
+  grid-auto-rows: 100px;
+  display: grid; }
+
+#newMovies {
+  border: 2px solid blue;
+  grid-row-start: 1;
+  grid-row-end: 3; }
+
+#scifi {
+  border: 2px solid orange;
+  grid-row-start: 3;
+  grid-row-end: 5; }
+
+#other {
+  border: 2px solid yellow;
+  grid-row-start: 5;
+  grid-row-end: 7; }
+
 #todolistTitle {
   margin-left: 42%;
   margin-right: 30%; }
@@ -94,5 +115,8 @@ body {
   top: 75px;
   margin-left: 35%;
   margin-right: 30%; }
+
+body {
+  background-color: #FFFA82; }
 
 /*# sourceMappingURL=main.css.map */
