--- a/public/css/_index.scss
+++ b/public/css/_index.scss
@@ -4,7 +4,7 @@ background-color: $soft-yellow;
 
 #index-wrapper{
   padding: 0;
-  border: 2px solid #A0E838;
+  // border: 2px solid #A0E838;
   display: grid;
   position: absolute;
   width: 100%;
