--- a/public/css/_layout.scss
+++ b/public/css/_layout.scss
@@ -1,3 +1,19 @@
+*{
+  padding: 0;
+  margin: 0;
+}
 body{
   background-color: #FFFA82;
+}
+
+#navbar{
+  position: relative;
+  background-color: $tomato-red;
+}
+
+#navbar li{
+  font-family: 'Lato', sans-serif;
+  display: inline;
+  // padding-left: 50px;
+  text-align: center;
 }
