--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,6 @@ body {
 
 #index-wrapper {
   padding: 0;
-  border: 2px solid #A0E838;
   display: grid;
   position: absolute;
   width: 100%;
@@ -494,10 +493,20 @@ template {
     opacity: .4; }
   to {
     opacity: 1; } }
-body {
-  background-color: #FFFA82; }
+* {
+  padding: 0;
+  margin: 0; }
 
 body {
   background-color: #FFFA82; }
+
+#navbar {
+  position: relative;
+  background-color: #FF4C24; }
+
+#navbar li {
+  font-family: 'Lato', sans-serif;
+  display: inline;
+  text-align: center; }
 
 /*# sourceMappingURL=main.css.map */
