--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,9 +3,10 @@
 <head>
 	<title> Rotten Cucumbers</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 <body>
-<nav>
+<nav id="navbar">
 	<ul>
 		<li><a href="/">Home</a></li>
 		<li><a href="contact">Contact</a></li>
