--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,6 +7,7 @@
 </head>
 <body>
 <nav id="navbar">
+	<a href="/"> <img id="navbar-img" src="images/Zoomed_Cucumber.jpg" alt="home" height="130px"> </a>
 	<ul>
 		<li><a href="/">Home</a></li>
 		<li><a href="contact">Contact</a></li>
