--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title> Rotten Cucumbers</title>
+	<link rel="icon" href="images/Zoomed_Cucumber.jpg">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
