all gallery buttons are working, finishing contact page

--- a/views/gallery.erb
+++ b/views/gallery.erb
@@ -11,8 +11,18 @@
 		<a id="newMoviesright">&#10095; </a>
 	</div>
 
-	<div id="scifi">Scifi</div>
-	<div id="other">Other</div>
+	<div id="scifi">
+		<a id="newscifileft">&#10094; </a>
+		Scifi
+		<a id="newscifiright">&#10095; </a>
+	</div>
+
+	<div id="other">
+		<a id="newotherleft">&#10094; </a>
+		Other
+		<a id="newotherright">&#10095; </a>
+	</div>
+
 </div>
 
 
