--- a/public/css/_gallery.scss
+++ b/public/css/_gallery.scss
@@ -1,24 +1,24 @@
 #galleryWrapper{
-	border: 2px solid red;
+	// border: 2px solid red;
 	grid-template-columns: 1fr;
 	grid-auto-rows: 100px;
 	display: grid;
 }
 
 #newMovies{
-	border: 2px solid blue;
+	// border: 2px solid blue;
 	grid-row-start: 1;
 	grid-row-end: 3;
 }
 
 #scifi{
-	border: 2px solid orange;
+	// border: 2px solid orange;
 	grid-row-start: 3;
 	grid-row-end: 5;
 }
 
 #other{
-	border: 2px solid yellow;
+	// border: 2px solid yellow;
 	grid-row-start: 5;
 	grid-row-end: 7;
 }
