--- a/views/contact.erb
+++ b/views/contact.erb
@@ -5,14 +5,47 @@
 </head>
 <body>
 
+<p class="normal" align="center">
+Contact Rotten Cucumbers 
+</p>
+
 <div id="contactWrapper">
 
-	<div id="twittericon"></div>
-	<div id="emailicon"></div>
-	<div id="phone"></div>
-	<div id="submit"></div>
+	<div id="twittericon">
+	<a href="http://www.twitter.com/RottenCucumbers" id="twittertext">
+	Rotten Cucumbers
+	</a>
+	</div>
+
+	<div id="emailicon">
+	<a href="mailto:contact@RottenCucumbers.com?subject=Contact Rotten Cucumbers" id="emailtext">	
+	Rotten Cucumbers
+	</a>
+	</div>
+
+	<div id="phone">
+	<b id="phonetext">1-800-CUCUMBER</b>
+	</div>
+
+	<div id="submit">
+		<b id="submittext">
+		Leave A Comment</b>
+		<br><br>
+
+		Name: <input type="text" name="submitName" id="submitName">
+		Comment: <input type="text" name="comment" id="comment">
+		<button id="submitButton">Submit</button>
+
+	</div>
 	
 </div>
 
+<div id="commentText">
+	<p class="normal" align="center">
+	Comments for Rotten Cucumber		
+	</p>
+</div>
+
+<script type="text/javascript" src="javascript/contact.js"></script>
 </body>
 </html>
