--- a/public/css/main.css
+++ b/public/css/main.css
@@ -387,15 +387,15 @@ template {
   display: none; }
 
 #contactWrapper {
-  border: 2px solid red;
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr;
-  grid-auto-rows: 70px;
-  border: 2px solid red; }
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: 70px; }
+
+p.normal {
+  font-weight: bold; }
 
 #twittericon {
-  border: 2px solid orange;
   background-image: url(../images/twitter.png);
   background-size: 30px;
   background-repeat: no-repeat;
@@ -404,8 +404,12 @@ template {
   /* this will move the image */
   left: 120px; }
 
+#twittericon > #twittertext {
+  position: relative;
+  /* this will move the image */
+  left: 60px; }
+
 #emailicon {
-  border: 2px solid green;
   background-image: url(../images/email.png);
   background-size: 30px;
   background-repeat: no-repeat;
@@ -414,8 +418,12 @@ template {
   /* this will move the image */
   left: 120px; }
 
+#emailicon > #emailtext {
+  position: relative;
+  /* this will move the image */
+  left: 60px; }
+
 #phone {
-  border: 2px solid purple;
   background-image: url(../images/telephone.png);
   background-size: 30px;
   background-repeat: no-repeat;
@@ -424,8 +432,12 @@ template {
   /* this will move the image */
   left: 120px; }
 
+#phone > #phonetext {
+  position: relative;
+  /* this will move the image */
+  left: 60px; }
+
 #submit {
-  border: 2px solid blue;
   background-image: url(../images/submit.png);
   background-size: 30px;
   background-repeat: no-repeat;
@@ -434,9 +446,14 @@ template {
   /* this will move the image */
   left: 120px; }
 
+#submit > #submittext {
+  position: relative;
+  /* this will move the image */
+  left: 60px; }
+
 #galleryWrapper {
   grid-template-columns: 1fr;
-  grid-auto-rows: 100px;
+  grid-auto-rows: 150px;
   display: grid; }
 
 #newMovies {
