--- a/public/css/main.css
+++ b/public/css/main.css
@@ -385,24 +385,85 @@ template {
 [hidden] {
   display: none; }
 
+#contactWrapper {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: 70px; }
+
+p.normal {
+  font-weight: bold; }
+
+#twittericon {
+  background-image: url(../images/twitter.png);
+  background-size: 30px;
+  background-repeat: no-repeat;
+  height: 30px;
+  position: relative;
+  /* this will move the image */
+  left: 120px; }
+
+#twittericon > #twittertext {
+  position: relative;
+  /* this will move the image */
+  left: 60px; }
+
+#emailicon {
+  background-image: url(../images/email.png);
+  background-size: 30px;
+  background-repeat: no-repeat;
+  height: 30px;
+  position: relative;
+  /* this will move the image */
+  left: 120px; }
+
+#emailicon > #emailtext {
+  position: relative;
+  /* this will move the image */
+  left: 60px; }
+
+#phone {
+  background-image: url(../images/telephone.png);
+  background-size: 30px;
+  background-repeat: no-repeat;
+  height: 30px;
+  position: relative;
+  /* this will move the image */
+  left: 120px; }
+
+#phone > #phonetext {
+  position: relative;
+  /* this will move the image */
+  left: 60px; }
+
+#submit {
+  background-image: url(../images/submit.png);
+  background-size: 30px;
+  background-repeat: no-repeat;
+  height: 30px;
+  position: relative;
+  /* this will move the image */
+  left: 120px; }
+
+#submit > #submittext {
+  position: relative;
+  /* this will move the image */
+  left: 60px; }
+
 #galleryWrapper {
-  border: 2px solid red;
   grid-template-columns: 1fr;
-  grid-auto-rows: 100px;
+  grid-auto-rows: 150px;
   display: grid; }
 
 #newMovies {
-  border: 2px solid blue;
   grid-row-start: 1;
   grid-row-end: 3; }
 
 #scifi {
-  border: 2px solid orange;
   grid-row-start: 3;
   grid-row-end: 5; }
 
 #other {
-  border: 2px solid yellow;
   grid-row-start: 5;
   grid-row-end: 7; }
 
