--- a/public/css/main.css
+++ b/public/css/main.css
@@ -457,7 +457,8 @@ p.normal {
 
 #newMovies {
   grid-row-start: 1;
-  grid-row-end: 3; }
+  grid-row-end: 3;
+  background-color: #A0E838; }
 
 #scifi {
   grid-row-start: 3;
@@ -465,7 +466,8 @@ p.normal {
 
 #other {
   grid-row-start: 5;
-  grid-row-end: 7; }
+  grid-row-end: 7;
+  background-color: #FF4C24; }
 
 #todolistTitle {
   margin-left: 44.5%;
