--- a/views/contact.erb
+++ b/views/contact.erb
@@ -41,10 +41,10 @@ Contact Rotten Cucumbers
 	</div>
 	
 </div>
-
+<div></div>
 <div id="commentText">
 	<p class="normal" align="center">
-	<br><br><br>
+	
 	Comments for Rotten Cucumber		
 	</p>
 </div>
