--- a/public/css/_contact.scss
+++ b/public/css/_contact.scss
@@ -21,7 +21,7 @@ p.normal{
 }
 
 #twittericon > #twittertext{
-	position: relative; /* this will move the image */
+	position: relative; /* this will move the text */
 	left: 60px;
 }
 
@@ -36,7 +36,7 @@ p.normal{
 }
 
 #emailicon > #emailtext{
-	position: relative; /* this will move the image */
+	position: relative; /* this will move the the text */
 	left: 60px;
 }
 
@@ -51,7 +51,7 @@ p.normal{
 }
 
 #phone > #phonetext{
-	position: relative; /* this will move the image */
+	position: relative; /* this will move the text */
 	left: 60px;
 }
 
@@ -66,7 +66,14 @@ p.normal{
 }
 
 #submit > #submittext{
-	position: relative; /* this will move the image */
+	position: relative; /* this will move the text */
 	left: 60px;
 }
+
+#commentText{
+	background-color: $lighter-green;
+}
+
+
+
 
